tests/132_recursive_struct.err
pirxc compilation failed: exit status 1
Output: tests/132_recursive_struct.pirx:2:1: error in struct declaration: type Node is not fully defined
Error: exit status 1
