tests/132_recursive_struct.pirx
// A struct cannot contain itself by value (only via a pointer).
struct Node {
  value: int;
  next: Node;
}

func main(): int {
  return 0;
}
